--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simply-promise",
+  "name": "dead-simple-promises",
   "version": "0.0.1",
   "description": "promises with very simple semantics and high performance",
   "main": "lib/promise.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/pqwy/shapelyjs.git"
+    "url": "git://github.com/pqwy/dead-simple-promises-js.git"
   },
   "keywords": [
     "promise",
